--- a/public/css/main.css
+++ b/public/css/main.css
@@ -645,6 +645,9 @@
 }
 
 .container-main-about{
+    height: 100vh;
+    width: 100vw;
+    
     display: flex;
     flex-direction: column;
     gap: 100px;
