--- a/public/css/_master.css
+++ b/public/css/_master.css
@@ -1,7 +1,8 @@
 :root {
     --cpalette-60: black;
     --cpalette-30: white;
-    --cpalette-10: #58C69D;
+    --cpalette-10-l: #58C69D;
+    --cpalette-10-d: #3EB68A;
     --inactive: gray;
     --cp-10-dark: #0A1E17;
     --cp-60-tinted: #030706;
@@ -16,6 +17,7 @@ body {
 
 p, h2, h1 {
     margin: 0;
+    color: var(--cpalette-60);
 }
 
 b {
@@ -23,9 +25,13 @@ b {
 }
 
 h1 {
-    margin-bottom: 0.75rem;
+    margin-bottom: 0.5rem;
 
     font-size: 1.5rem;
+}
+
+form {
+    margin: 0;
 }
 
 input, button {
@@ -33,8 +39,27 @@ input, button {
     font-size: 1rem;
 }
 
-input {
+input[type=text], input[type=password] {
     padding-left: 0.75rem;
+
+    border: 2px solid var(--cp-10-dark);
+    border-radius: 3px;
+    outline: none;
+}
+
+input[type=text]:hover, input[type=password]:hover {
+    border: 2px solid var(--cpalette-10-l);
+}
+
+input[type=text]:focus, input[type=password]:focus {
+    border: 3px solid var(--cpalette-10-l);
+}
+
+input.short {
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+
+    border-radius: 0.5rem;
 }
 
 button {
@@ -54,7 +79,7 @@ button:hover, button.cta:hover {
 }
 
 button:active, button.cta {
-    background: var(--cpalette-10);
+    background: var(--cpalette-10-d);
     color: var(--cpalette-60);
 }
 
@@ -63,11 +88,32 @@ button.cta:active {
     color: var(--cpalette-30);
 }
 
+button.link {
+    background: none;
+    color: var(--cpalette-10-d);
+
+    font-weight: 700;
+}
+
+hr {
+    margin: 0 0 0.75rem 0;
+
+    height: 0.0625rem;
+    background-color: var(--cp-10-dark);
+    border-width: 0;
+}
+
 .content {
     width: 100%;
     min-height: calc(100vh - 4.5rem);
 
     padding-top: 1.1875rem;
+}
+
+.content.prelogin {
+    height: 100vh;
+
+    padding: 0;
 }
 
 .main {
@@ -86,6 +132,14 @@ button.cta:active {
     border-radius: 10px;
     background: var(--cpalette-30);
     padding: 0.625rem 1.6875rem;
+}
+
+.em.sm {
+    font-size: 1.125rem;
+}
+
+.nm.sm {
+    font-size: 0.875rem;
 }
 
 /* CONSTANTS */
