--- a/public/css/master.css
+++ b/public/css/master.css
@@ -8,6 +8,11 @@
     --cp-60-tinted: #030706;
 }
 
+::selection {
+    background: var(--cpalette-10-d);
+    color: var(--cpalette-30);
+}
+
 body {
     font-family: 'Inter', sans-serif;
     margin: 0;
@@ -93,6 +98,7 @@ button.link {
     color: var(--cpalette-10-d);
 
     font-weight: 700;
+    font-style: italic;
 }
 
 hr {
@@ -140,6 +146,15 @@ hr {
 
 .nm.sm {
     font-size: 0.875rem;
+}
+
+.box-input {
+    width: 100%;
+    height: 2.75rem;
+
+    margin-bottom: 1.5rem;
+
+    display: flex;
 }
 
 /* CONSTANTS */
