--- a/public/css/home.css
+++ b/public/css/home.css
@@ -26,7 +26,7 @@ h1 {
 }
 
 .featured .preview {
-    padding: 0.5625rem 0;
+    margin: 0.5625rem 0;
     flex-grow: 1;
 
     overflow: hidden;
@@ -89,10 +89,6 @@ input[type=text] {
     flex-grow: 1;
 }
 
-.large {
-    padding: 1.125rem 2rem;
-}
-
 .blog button {
     height: 1.5625rem;
     padding: 0.25rem 0.625rem;
@@ -121,6 +117,7 @@ input[type=text] {
 .box-info {
     height: 100%;
     flex-grow: 1;
+    width: 10px;
 
     display: flex;
     flex-direction: column;
@@ -129,6 +126,10 @@ input[type=text] {
 .blog .title {
     font-size: 1.25rem;
     font-weight: 700;
+
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .blog .details {
@@ -136,8 +137,18 @@ input[type=text] {
 }
 
 .blog .preview {
+    display: block;
+
+    max-height: calc(3 * 0.875rem);
+    line-height: 0.875rem;
+    
+    margin: 0.75rem 0;
+    
     font-size: 0.875rem;
-    padding: 0.75rem 0;
+
+    overflow: hidden;
+    word-wrap: break-word;
+    text-overflow: ellipsis;
 }
 
 .blog .image {
