--- a/public/css/content.css
+++ b/public/css/content.css
@@ -1,6 +1,7 @@
 .content {
     display: flex;
     justify-content: center;
+    gap: 0.625rem;
 }
 
 .content img {
@@ -17,6 +18,7 @@
     width: 41.8125rem;
 
     display: flex;
+    box-sizing: border-box;
     flex-direction: column;
     align-items: center;
     gap: 0.625rem;
@@ -25,4 +27,13 @@
 .title {
     font-size: 1.5rem;
     font-weight: 700;
+}
+
+textarea, textarea:hover, textarea:focus {
+    width: 100%;
+    height: fit-content;
+
+    scroll-behavior: smooth;
+
+    border: none;
 }
