--- a/public/css/home.css
+++ b/public/css/home.css
@@ -28,6 +28,7 @@ h1 {
 .featured .preview {
     margin: 0.5625rem 0;
     flex-grow: 1;
+    white-space: pre-line;
 
     overflow: hidden;
     white-space: normal;
@@ -152,6 +153,7 @@ input[type=text] {
     margin: 0.75rem 0;
     
     font-size: 0.875rem;
+    white-space: pre-line;
 
     overflow: hidden;
     word-wrap: break-word;
